[package]
name = "Test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 's'
strip = true
#codegen-units = 1

[dependencies]
Rust_SDK = { path = "../Rust_SDK" }
wee_alloc = "0.4.5"
